<resources>
    <string name="app_name">Tu préfères ?</string>
    <string name="title_header">Tu préfères ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="stats_fragment">Statistiques fragment</string>
    <string name="help_fragment">Help fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_photo">Prendre une photo</string>
    <string name="choose_from_gallery">Choisir depuis la galerie</string>
    <string name="permission_camera_denied">Vous avez refusé l\'accès à la caméra !</string>
    <string name="permission_read_external_storage_denied">Vous avez refusé l\'accès à la galerie !</string>
    <string name="or_button">OU</string>
    <string name="edit_button_category">Modifier</string>
    <string name="add_pairs_category">Ajouter paire</string>
    <string name="see_pairs">Voir paires</string>
    <string name="delete_button_category">Supprimer</string>
    <string name="launch_a_part">Lancer une partie</string>
    <string name="add_pairs_title">Ajouter une paire</string>
    <string name="choix_1_input">Choix 1</string>
    <string name="texte">Texte</string>
    <string name="choix_2_input">Choix 2</string>
    <string name="picture_input">Image</string>
    <string name="confirm_button">Valider</string>
    <string name="create_category_title">Créer une catégorie</string>
    <string name="picture_input_obligatory">Image *</string>
    <string name="name_input_obligatory">Nom *</string>
    <string name="edit_category_title">Modifier la catégorie</string>
    <string name="help">Aide</string>
    <string name="normal_game">Mode normal</string>
    <string name="help_normal_text">Dans ce mode, vous aurez à chaque étape, le choix entre deux propositions. Les étapes changeront à chaque fois que vous faites un choix. Il n\'y a pas de fin ... Choisissez tant que vous voulez !</string>
    <string name="creation_game">Mode création</string>
    <string name="personnal_game_text">Dans ce mode, vous aurez la possibilité de créer vos propores catégories et de les éditer comme vous voulez. Vous pourrez ajouter une image et un nom à vos catégories, les modifier, ajouter des questions ...</string>
    <string name="description_normal_game_home">Jouez en faisant votre choix parmi une \nsérie de questions diverses et variées</string>
    <string name="creation_game_description">Créez et jouez avec vos propres catégories</string>
    <string name="categories_title">Catégories</string>
    <string name="add_buton">Ajouter</string>
    <string name="statistics_title">Statistiques</string>
    <string name="game_played">Parties jouées :</string>
    <string name="number_of_categories">Nombre de catégories :</string>
    <string name="number_of_swipes">Nombre de swipes :</string>
    <string name="number_of_pairs">Nombre de paires :</string>
    <string name="number_0">0</string>
    <string name="see_image_button">Voir image</string>
</resources>